# MachineLearning

./: README.md  a.txt  b.txt  test.txt
Basic_ML_Libs-Python/Matplot/: basics.ipynb
Basic_ML_Libs-Python/Numpy/: basics.py  pyproject.toml
Basic_ML_Libs-Python/Pandas/: pandas.ipynb
Books/Hands-On-MachineLearning/: readme.md
MachineLearning(Coursera)/: requirements.txt  requirements_3.10.txt
MachineLearning(Coursera)/MachineLearningOLD/Exercise/ex1-octave/: computeCost.m  computeCostMulti.m  ex1_multi.m  ex1data3.txt  featureNormalize.m  gradientDescent.m  gradientDescentMulti.m  normalEqn.m  plotData.m  token.mat
MachineLearning(Coursera)/MachineLearningOLD/Exercise/ex1-octave again!/: ex1_multi.m  featureNormalize.m  gradientDescent.m  gradientDescentMulti.m  plotData.m
MachineLearning(Coursera)/MachineLearningOLD/Exercise/ex2-octave/: costFunction.m  costFunctionReg.m  plotData.m  predict.m  sigmoid.m  token.mat
MachineLearning(Coursera)/MachineLearningOLD/Exercise/ex3-octave/: lrCostFunction.m  oneVsAll.m  predict.m  predictOneVsAll.m  token.mat
MachineLearning(Coursera)/MachineLearningOLD/Notes/: MachineLearning CourseraNotes.docx
MachineLearning(Coursera)/MachineLearningPython/ Regression and Classification/W1/: C1_W1_Lab01_Python_Jupyter_Soln.ipynb  C1_W1_Lab02_Model_Representation_Soln.ipynb  C1_W1_Lab03_Cost_function_Soln.ipynb  C1_W1_Lab04_Gradient_Descent_Soln.ipynb
MachineLearningPython/Files/W1Labs/: C1_W1_Lab02_Model_Representation_Soln.ipynb  C1_W1_Lab03_Cost_function_Soln.ipynb  C1_W1_Lab04_Gradient_Descent_Soln.ipynb
(+14 files in other folders)
