[tool.poetry]
name = "numpy-basics"
version = "0.1.0"
description = "learn basics of numpy"
authors = ["Sid <Sidharthchandel27@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
